# claude_rag_sdk

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app_state.py  config.py  conftest.py  docker-compose.yml  mcp_config.example.json  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/workflows/: ci.yml  lint.yml
agents/: __init__.py  chat_agent.py  evaluator.py  metrics.py  session_cache.py  title_generator.py
claude_rag_sdk/: agent.py  rag.py
claude_rag_sdk/rag_mcp/: server.py
config/: atlantyx_agent.json
data/: .backend_ingest_cache.json  .sdk_ingest_cache.json
examples/: basic_search.py  production_setup.py  with_agent.py
quiz/: __init__.py  router.py
quiz/engine/: __init__.py  dedup_engine.py  quiz_engine.py  scoring_engine.py
quiz/llm/: __init__.py  factory.py
quiz/models/: __init__.py  enums.py  schemas.py  state.py
quiz/prompts/: __init__.py  templates.py
quiz/storage/: __init__.py  quiz_store.py
rag-agent/: ARCHITECTURE.md  config.py  mcp_server.py  rag_agent.py
rag-agent/api/: __init__.py  health.py  metrics.py
rag-agent/core/: agentfs_manager.py  prompt_guard.py  rate_limiter.py  security.py  sync_audit.py
rag-agent/ingest/: __init__.py  chunker.py  ingestion_pipeline.py
rag-agent/models/: __init__.py  document.py
rag-agent/scripts/: migrate_embeddings.py  monitor_cache.py  rechunk_documents.py
reports/: evaluation.json  evaluation.txt
routers/: __init__.py  artifacts.py  audit.py  chat.py  evaluate.py  fs.py  mcp_ingest.py  neo4j_mcp.py  outputs.py  quiz.py  rag.py  sessions.py
routers/v1/: __init__.py
scripts/: evaluate_rag.py  generate_ts_models.py  ingest.py  ingest_angular_mcp.py  ingest_atlantyx.py  ingest_backend.py  ingest_claude_agent_sdk.py  ingest_ebook.py  ingest_regulamento.py  ingest_sdk.py  migrate_prints_to_logger.py  run_evaluation.py  run_tests.py  watch_evaluation.sh
teste/: ingest_meta_docs.py
tests/: conftest.py  test_endpoints.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_chat_integration.py
tests/performance/: test_performance.py
tests/unit/: test_adaptive_search.py  test_auth.py  test_cache.py  test_chat_agent.py  test_circuit_breaker.py  test_config.py  test_hybrid_search.py  test_prompt_guard.py  test_quiz_engine.py  test_quiz_schemas.py  test_quiz_store.py  test_rate_limiter.py  test_reranker.py  test_scoring_engine.py  test_tool_validator.py
utils/: __init__.py  debug_parser.py  file_watcher.py  mcp_neo4j_bridge.py  validators.py
